# SumoPontifice-DatasetVisualInercial

./: .gitignore  CMakeLists.txt  README.md
include/: driver.hpp  inv_mpu.h  inv_mpu_dmp_motion_driver.h  mpumanager.h
src/: driver.cpp  inv_mpu.c  inv_mpu_dmp_motion_driver.c  mpumanager.cpp  test_IMU.cpp  test_IMU_CAM.cpp  test_IMU_CAM_Driver.cpp  test_driver.cpp  test_main.cpp  test_raspicam.cpp
tools/convert/: convertEncoder2Gt.py  data.csv
tools/plot/: plot.py
